--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+
 ---
 
 <html lang="en">
@@ -12,7 +13,18 @@
 	<body>
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		<h1>Astro</h1>
+		<a href="/productos/">Productos</a>
+		<h1 id="astro">Astro</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati qui ipsa impedit dolore. Blanditiis odio sapiente saepe velit impedit.</p>
+		<script>
+			const myElement = document.getElementById("astro");
+			myElement.style.color = "red";	
+		</script>
+			
+		<style>
+			body{
+				background-color: lightgray;
+			}
+		</style>
 	</body>
 </html>
