--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,29 +1,2 @@
----
----
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-        <h1>About Me</h1>
-		<h2>... and my new Astro site!</h2>
-
-		<p>
-			I am working through Astro's introductory tutorial. This is the
-			second page on my website, and it's the first one I built myself!
-		</p>
-
-		<p>
-			This site will update as I complete more of the tutorial, so keep
-			checking back and see how my journey is going!
-		</p>
-	</body>
-</html>
+<h1>Acerca de mi web de Astro</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, rem. Omnis pariatur id similique temporibus fuga. Recusandae consequuntur, mollitia, repellat, quibusdam iste alias vitae magnam consequatur cum odio maxime quidem!</p>
