--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
@@ -16,6 +15,7 @@
 		<a href="/productos/">Productos</a>
 		<h1 id="astro">Astro</h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati qui ipsa impedit dolore. Blanditiis odio sapiente saepe velit impedit.</p>
+		<span>Estamos en un cambio</span>
 		<script>
 			const myElement = document.getElementById("astro");
 			myElement.style.color = "red";	
