cambio en h1 de index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/productos/">Productos</a>
-		<h1 id="astro">Astro</h1>
+		<h1 id="astro desde VS code">Astro</h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati qui ipsa impedit dolore. Blanditiis odio sapiente saepe velit impedit.</p>
 		<span>Estamos en un cambio</span>
 		<script>
