--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@
 		<h1 id="astro">Astro desde VS code</h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati qui ipsa impedit dolore. Blanditiis odio sapiente saepe velit impedit.</p>
 		<span>Estamos en un cambio</span>
+		<p>Lorem ipsum dolor sit amet.</p>
 		<script>
 			const myElement = document.getElementById("astro");
 			myElement.style.color = "red";	
