--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@
 		<p>Lorem ipsum dolor sit amet.</p>
 		<script>
 			const myElement = document.getElementById("astro");
-			myElement.style.color = "red";	
+			myElement.style.color = "navy";	
 		</script>
 			
 		<style>
