add componente card

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,2 +1,10 @@
+---
+import Card from '../components/card.astro'
+---
+
 <h1>Acerca de mi web de Astro</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, rem. Omnis pariatur id similique temporibus fuga. Recusandae consequuntur, mollitia, repellat, quibusdam iste alias vitae magnam consequatur cum odio maxime quidem!</p>
+<h3>Quienes somos</h3>
+
+<Card nombre="Luis" profesion="Ingeniero"/>
+<Card nombre="Pepe" profesion="Militar"/>
+<Card/>
