--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,13 @@
 ---
 import Card from '../components/card.astro'
+import Layout from '../components/layout.astro';
 ---
 
-<h1>Acerca de mi web de Astro</h1>
+<Layout>
+    <h1>Acerca de mi web de Astro</h1>
 <h3>Quienes somos</h3>
 
 <Card nombre="Luis" profesion="Ingeniero"/>
 <Card nombre="Pepe" profesion="Militar"/>
 <Card/>
+</Layout>
