--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -1,4 +1,10 @@
-<h1>Relación de productos</h1>
+---
+import Layout from "../components/layout.astro";
+---
+
+<Layout>
+    <h1>Relación de productos</h1>
 <p>Lorem ipsum dolor sit.</p>
 
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, magni quidem. Molestiae consequatur distinctio aut maxime laboriosam fugiat, eius ducimus, earum eos neque corrupti magni inventore cum in magnam! Dolores nisi cum provident quasi maiores vitae. Animi alias recusandae hic!</p>
+</Layout>
