--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,14 @@
 ---
-
+import Layout from "../components/layout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<a href="/">Home</a>
+<Layout>
+	<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/productos/">Productos</a>
 		<h1 id="astro">Astro desde VS code</h1>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati qui ipsa impedit dolore. Blanditiis odio sapiente saepe velit impedit.</p>
-		<span>Estamos en un cambio</span>
+		
 		<p>Lorem ipsum dolor sit amet.</p>
 		<script>
 			const myElement = document.getElementById("astro");
@@ -27,5 +20,4 @@
 				background-color: lightgray;
 			}
 		</style>
-	</body>
-</html>
+</Layout>
