add titlepage y escriptiobpage

--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -1,5 +1,9 @@
 ---
-
+interface props {
+    titlePage: string
+    descriptionPage: string
+}
+const {titlePage, descriptionPage} = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -8,7 +12,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial Astro</title>
+    <meta name="description" content={descriptionPage}>   
+    <title>Tutorial Astro | {titlePage}</title>
 </head>
 <body>
    <slot/>
