--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Card from '../components/card.astro'
 import Layout from '../components/layout.astro';
 ---
 
-<Layout>
+<Layout titlePage="Quienes somos" descriptionPage="Web de Luis">
     <h1>Acerca de mi web de Astro</h1>
 <h3>Quienes somos</h3>
 
