--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../components/layout.astro";
 ---
 
-<Layout>
+<Layout titlePage="Inicio" descriptionPage="Menú principal">
 	<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/productos/">Productos</a>
