--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -2,7 +2,7 @@
 import Layout from "../components/layout.astro";
 ---
 
-<Layout>
+<Layout titlePage="Productos" description="Relación de productos">
     <h1>Relación de productos</h1>
 <p>Lorem ipsum dolor sit.</p>
 
