--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -1,29 +1,34 @@
 ---
-interface props {
-    titlePage: string
-    descriptionPage: string
+interface Props {
+    titlePage: string;
+    descriptionPage: string;
 }
-const {titlePage, descriptionPage} = Astro.props;
+const { titlePage, descriptionPage } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content={descriptionPage}>   
-    <title>Tutorial Astro | {titlePage}</title>
-</head>
-<body>
-   <slot/>
-    <style>
-        body{
-            height: 100%;
-            background-color: #d1c6c6;
-            font-family: 'Gill Sans', sans-serif;
-        }
-    </style>
-
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content={descriptionPage} />
+        <title>Tutorial Astro | {titlePage}</title>
+    </head>
+    <body>
+        <slot />
+        <style>
+            body {
+                background-color: lightgray;
+            }
+            a {
+                text-decoration: none;
+                background-color: goldenrod;
+                color: white;
+                padding: 10px 20px;
+                border-radius: 8px;
+                margin: 20px;
+            }
+        </style>
+    </body>
 </html>
